# password_manager

./: README.md  generate_password.py  main.py  main_manager.py  pass_manager.py  password.py  password_manager.py  setup.cfg  travis.yml  window_ui.py
data/: passwords.txt
