[metadata]
name = <password_manager>
version = <version number: 1.1.0>
license = <license name, e.g. MIT>
description = <Password Manager for storing, updating and searching username and password>
long_description = file: README.md
author = <Ruben Sanduleac>
author_email = <Optional: author e-mail>
classifiers=
   <classifier 1>
   <classifier 2>
   <...>
   <classifier m>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   <pyperclip>

[options.packages.find]
where=src